[package]
name = "noterino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
console = "0.15.2"
dialoguer = "0.10.2"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = "1.0.148"
thiserror = "1.0.37"
