[package]
name = "noterino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = "4.1.4"
console = "0.15.2"
dialoguer = "0.10.2"
hostname = "0.3.1"
nanoserde = "0.1.32"
reqwest = { version = "0.11.13", features = ["blocking"] }
thiserror = "1.0.37"
users = "0.11.0"
